# rust-web-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-e4f9ca4d7dddf7f183b156820ff1d7910f8e4e88842e59d4b883067d268c4d84.json
configuration/: base.yaml  prod.yaml
migrations/: 20241125054804_make_status_not_null_in_subscriptions.sql  20241125055129_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
